# Intel

./: .env.example  .gitignore  AGENTS.md  Notionary - Intel AIoT.docx  PROJECT_OVERVIEW.md  README.md  check_data.py  database_schema_gemini.sql  disable_rls.sql  example_query_specific_pdf.py  implementation.md  learning.md  main.py  pyproject.toml  requirements.txt  run_server.py  simple_auth.py  test.py
api/: __init__.py  main.py
core/: __init__.py
core/database/: __init__.py  config.py  manager.py  migration_tutor_profiles.sql  migration_user_pdfs.sql  run_migrations.py  setup.sql
docs/: system_architecture.md
frontend/: auth.css  auth.html  auth.js  index.html  script.js  style.css
modules/: __init__.py
modules/agents/: retrieval_agent.py  tutor_agent.py
modules/ai_providers/: gemini_integrator.py
modules/doubt_solver/: __init__.py
modules/doubt_solver/models/: __init__.py
modules/doubt_solver/services/: __init__.py  context_retriever.py  llm_integrator.py  question_processor.py  response_generator.py
modules/doubt_solver/utils/: __init__.py
modules/pdf_processor/: __init__.py
modules/pdf_processor/models/: __init__.py  pdf_models.py
modules/pdf_processor/services/: __init__.py  database_manager.py  embedding_generator.py  pdf_processor.py  text_extractor.py
modules/pdf_processor/utils/: __init__.py
tests/: check_db.py
utils/: __init__.py  performance_monitor.py
